fixed spacing between home and about sections, and some of the navbar styling on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,6 +119,7 @@ main .icons a:hover {
 main #home {
   width: 100%;
   height: calc(100vh + 80px);
+  margin-bottom: 100px;
 }
 
 #about, #projects, #contact {
@@ -126,7 +127,7 @@ main #home {
 }
 
 #about {
-  margin-top: 5vh;
+  margin-top: 100vh;
 }
 
 .bio-image {
@@ -264,6 +265,46 @@ main #home {
   .projects {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .navbar {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 5px;
+    background-color: #1f1f21;
+  }
+  .navbar-toggle {
+    display: none;
+  }
+
+  .logo {
+    float: left;
+    margin: 8px;
+  }
+  .logo::after {
+    clear: right;
+    content: "";
+  }
+
+  .main-nav {
+    display: flex;
+    list-style-type: none;
+    text-align: center;
+  }
+  .main-nav > .nav-item {
+    flex: 1;
+    text-decoration: none;
+    padding: 12px;
+    margin-top: 9px;
+  }
+  .main-nav > .nav-item .nav-link {
+    color: #fff;
+    background-color: #287098;
+    padding: 18px;
+  }
+  .main-nav > .nav-item .nav-link:hover {
+    background-color: #2d2e31;
+    transition: all 0.5s ease-out;
+  }
 }
 @media screen and (min-width: 1200px) {
   .contact-info {
@@ -280,10 +321,50 @@ main #home {
   .projects {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .navbar {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 5px;
+    background-color: #1f1f21;
+  }
+  .navbar-toggle {
+    display: none;
+  }
+
+  .logo {
+    float: left;
+    margin: 8px;
+  }
+  .logo::after {
+    clear: right;
+    content: "";
+  }
+
+  .main-nav {
+    display: flex;
+    list-style-type: none;
+    text-align: center;
+  }
+  .main-nav > .nav-item {
+    flex: 1;
+    text-decoration: none;
+    padding: 12px;
+    margin-top: 9px;
+  }
+  .main-nav > .nav-item .nav-link {
+    color: #fff;
+    background-color: #287098;
+    padding: 18px;
+  }
+  .main-nav > .nav-item .nav-link:hover {
+    background-color: #2d2e31;
+    transition: all 0.5s ease-out;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   #about, #projects, #contact {
-    margin-bottom: 3vh;
+    margin-bottom: 10vh;
   }
 
   #home {
@@ -296,10 +377,6 @@ main #home {
     line-height: 1;
     margin-bottom: 1rem;
     min-height: 0;
-  }
-
-  #about {
-    margin-top: calc(100vh, 50px);
   }
 
   .about-info {
@@ -345,7 +422,7 @@ main #home {
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   #home {
-    height: calc(100vh);
+    height: 100vh;
   }
 
   #about, #contact, #projects {
@@ -353,7 +430,7 @@ main #home {
   }
 
   #about {
-    margin-top: calc(100vh + 15vh);
+    margin-top: 600px;
   }
 
   .navbar {
@@ -379,14 +456,21 @@ main #home {
 
   .active {
     display: flex;
-    height: 250px;
+    height: 230px;
     background-size: cover;
     background-color: #1f1f21;
+    flex-direction: column;
+  }
+  .active > .nav-item {
+    display: inline-block;
+    margin-top: 2px;
+    margin-bottom: 2px;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 479px) {
   #home {
-    height: calc(100vh);
+    height: 100vh;
+    margin-bottom: 50px;
   }
 
   main {
@@ -400,10 +484,99 @@ main #home {
     font-size: 5rem;
   }
   main #about, main #projects, main #contact {
-    margin-bottom: 1vh;
+    margin-bottom: 5vh;
   }
-  main #about {
-    margin-top: calc(100vh + 30vh);
+
+  .bio-image {
+    margin-top: 5vh;
+  }
+
+  .about-info {
+    grid-template-areas: "bio";
+    grid-template-columns: 1fr;
+  }
+
+  .test-results {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .certificate {
+    margin-bottom: 15px;
+  }
+
+  .contact-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .contact-info div.info {
+    padding: 5px;
+    border-bottom: #287098 3px solid;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
+  }
+
+  header {
+    height: 60px;
+  }
+
+  .navbar {
+    height: 100%;
+    background-color: #1f1f21;
+  }
+  .navbar-toggle {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 24px;
+  }
+
+  .main-nav {
+    flex-wrap: wrap;
+    display: none;
+    height: 100%;
+  }
+  .main-nav > .nav-item {
+    flex-basis: 100%;
+  }
+
+  .active {
+    display: flex;
+    height: 245px;
+    background-size: cover;
+    background-color: #1f1f21;
+  }
+
+  .logo {
+    margin-top: 4px;
+  }
+}
+@media screen and (min-width: 200px) {
+  #home {
+    height: 100vh;
+    margin-bottom: 50px;
+  }
+
+  main {
+    padding: 2rem;
+  }
+  main #home h1 {
+    margin-top: 2vh;
+  }
+  main #home .lg-heading {
+    margin-top: 1rem;
+    font-size: 5rem;
+  }
+  main #about, main #projects, main #contact {
+    margin-bottom: 5vh;
   }
 
   .bio-image {
